--- a/index.html
+++ b/index.html
@@ -274,63 +274,63 @@
   </div>
 </section>
 
-<section id="projects" class="h-screen flex relative hidden">
-  <div class="absolute top-4 left-4 cursor-pointer" id="back-to-hero-about">
-    <div class="back-button">
-      <i class="fas fa-arrow-left text-black"></i>
-  </div>
-  </div>
-
-  <!-- Left Section: Image Background with Text -->
-  <div class="w-1/2 bg-cover bg-center flex items-center justify-center p-8" style="background-image: url('file:///C:/Users/USER/Desktop/monarch/asset/office.webp');">
-    <h2 class="text-4xl font-bold text-white text-center">At Monarch, we take pride in our work</h2>
-  </div>
-
-  <!-- Right Section: Scrollable Cards -->
-  <div class="w-1/2 bg-white overflow-y-scroll p-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <!-- Card 1 -->
-      <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
-        <div class="h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQx5zYX8j2YCF-rEAOpc9XG9x2q1npFpqD0yU72y5lJk62kkMm7');"></div>
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Project 1</h3>
-          <p class="text-gray-600">Description of the project goes here.</p>
-          <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
-        </div>
+<section id="projects" class="h-screen flex flex-col lg:flex-row relative hidden">
+    <div class="absolute top-4 left-4 cursor-pointer" id="back-to-hero-about">
+      <div class="back-button">
+        <i class="fas fa-arrow-left text-black"></i>
       </div>
-
-      <!-- Card 2 -->
-      <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
-        <div class="h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+2');"></div>
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Project 2</h3>
-          <p class="text-gray-600">Description of the project goes here.</p>
-          <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+    </div>
+  
+    <!-- Left Section: Image Background with Text -->
+    <div class="w-full lg:w-1/2 bg-cover bg-center flex items-center justify-center p-8" style="background-image: url('file:///C:/Users/USER/Desktop/monarch/asset/office.webp');">
+      <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-white text-center">At Monarch, we take pride in our work</h2>
+    </div>
+  
+    <!-- Right Section: Scrollable Cards -->
+    <div class="w-full lg:w-1/2 bg-white overflow-y-scroll p-4 sm:p-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <!-- Card 1 -->
+        <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
+          <div class="h-36 sm:h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQx5zYX8j2YCF-rEAOpc9XG9x2q1npFpqD0yU72y5lJk62kkMm7');"></div>
+          <div class="p-4">
+            <h3 class="text-lg sm:text-xl font-bold mb-2">Project 1</h3>
+            <p class="text-gray-600">Description of the project goes here.</p>
+            <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+          </div>
         </div>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
-        <div class="h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+3');"></div>
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Project 3</h3>
-          <p class="text-gray-600">Description of the project goes here.</p>
-          <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+  
+        <!-- Card 2 -->
+        <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
+          <div class="h-36 sm:h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+2');"></div>
+          <div class="p-4">
+            <h3 class="text-lg sm:text-xl font-bold mb-2">Project 2</h3>
+            <p class="text-gray-600">Description of the project goes here.</p>
+            <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+          </div>
         </div>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
-        <div class="h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+4');"></div>
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Project 4</h3>
-          <p class="text-gray-600">Description of the project goes here.</p>
-          <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+  
+        <!-- Card 3 -->
+        <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
+          <div class="h-36 sm:h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+3');"></div>
+          <div class="p-4">
+            <h3 class="text-lg sm:text-xl font-bold mb-2">Project 3</h3>
+            <p class="text-gray-600">Description of the project goes here.</p>
+            <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+          </div>
+        </div>
+  
+        <!-- Card 4 -->
+        <div class="bg-gray-100 rounded-lg shadow-lg transform transition duration-300 hover:scale-105">
+          <div class="h-36 sm:h-48 bg-cover bg-center rounded-t-lg" style="background-image: url('https://placehold.co/300x200?text=Project+4');"></div>
+          <div class="p-4">
+            <h3 class="text-lg sm:text-xl font-bold mb-2">Project 4</h3>
+            <p class="text-gray-600">Description of the project goes here.</p>
+            <a href="#" class="mt-4 inline-block bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded">View Website</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 <section id="people" class="relative w-full h-screen flex flex-wrap overflow-hidden bg-black hidden">
     <!-- Back Button -->
