--- a/index.html
+++ b/index.html
@@ -109,20 +109,25 @@
 <body class="bg-gray-900 text-white">
 
     <!-- Hero Section -->
-    <section id="hero" class="h-screen flex flex-col items-center justify-center bg-cover bg-center relative" style="background-image: url('https://static.vecteezy.com/system/resources/thumbnails/008/969/361/small_2x/multi-layers-gray-blue-dark-texture-3d-papercut-layers-in-gradient-banner-abstract-paper-cut-art-background-design-for-website-template-topography-map-concept-or-smooth-origami-paper-cut-vector.jpg');">
-      <div class="hero-section text-center">
-          <h1 class="text-10xl md:text-9xl font-bold hero-title">
-              Monarch
-          </h1>
-          <div class="mt-8">
-              <p class="text-3xl md:text-5xl hero-subtitle">
-                  Live through experience
-              </p>
-             
-          </div>
-      </div>
-      <i id="menu-icon" class="fas fa-bars text-3xl absolute top-4 left-4 cursor-pointer"></i>
-  </section>
+   <section id="hero" class="h-screen flex flex-col items-center justify-center bg-cover bg-center relative" style="background-image: url('https://static.vecteezy.com/system/resources/thumbnails/008/969/361/small_2x/multi-layers-gray-blue-dark-texture-3d-papercut-layers-in-gradient-banner-abstract-paper-cut-art-background-design-for-website-template-topography-map-concept-or-smooth-origami-paper-cut-vector.jpg');">
+    <div class="hero-section text-center">
+        <h1 class="text-6xl md:text-9xl font-bold hero-title">
+            Monarch
+        </h1>
+        <div class="mt-4 md:mt-8">
+            <p class="text-2xl md:text-4xl hero-subtitle">
+                Live through experience
+            </p>
+        </div>
+    </div>
+    <i id="menu-icon" class="fas fa-bars text-3xl absolute top-4 left-4 cursor-pointer"></i>
+
+    <!-- Footer inside the hero section -->
+    <footer class="absolute bottom-0 w-full text-center py-4 text-white bg-opacity-70">
+        <p>&copy; 2024 Monarch. All rights reserved.</p>
+    </footer>
+</section>
+
 
     <!-- Navigation Menu (Hidden initially) -->
     <nav id="menu" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex flex-col justify-center items-start space-y-8 p-8 hidden">
