--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <!-- Add more people here as needed -->
 </section>
 
-<section id="contact" class="relative w-full h-screen flex flex-col md:flex-row bg-black">
+<section id="contact" class="relative w-full h-screen flex flex-col md:flex-row bg-black hidden">
     <!-- Left Side: Contact Info -->
     <div class="left-side w-full md:w-1/3 h-full bg-cover bg-center relative flex flex-col justify-center items-start p-8" style="background-image: url('https://via.placeholder.com/600');">
         <!-- Back Button -->
